--- a/css/style.css
+++ b/css/style.css
@@ -7325,6 +7325,45 @@ button.bg-dark:focus {
   margin-bottom: 1.5rem !important;
 }
 
+.main-container {
+  position: absolute;
+  width: 100%;
+  top: 5%;
+}
+
+.slogan-box {
+  background: rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.slider-item.six {
+  background-image: url("/images/slider-photo-six.jpg");
+  border: 1px solid red;
+}
+
+.slogan-box h1,
+.slogan-box h3 {
+  color: #f0f8ff;
+}
+
+.col-md-6.text.ftco-animate {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+  border-radius: 8px;
+  top: 0;
+}
+
+.mb-4 h1{
+  font-size: 30px;
+  
+}
+
 .ml-4,
 .mx-4 {
   margin-left: 1.5rem !important;
