changes to services description

--- a/css/style.css
+++ b/css/style.css
@@ -7344,6 +7344,10 @@ button.bg-dark:focus {
   border: 1px solid red;
 }
 
+.slogan-box {
+  
+}
+
 .slogan-box h1,
 .slogan-box h3 {
   color: #f0f8ff;
